src/style.css
* {
  font-family: 'Roboto', Arial, sans-serif;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  background-color: #121212;
  color: white;
}

body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  height: 100vh;
}
/* Canvas width = Canvas height, so, to avoid the game being cut off, we have to base both dimensions on the smaller one,
which is height for landscape orientation, width for portrait orientation */
@media screen and (orientation: landscape) {
  canvas {
    max-height: 82vh;
  }
}
@media screen and (orientation: portrait) {
  canvas {
    max-width: 95vw;
  }
}

/* Game Screen */
header, footer {
  display: flex;
  flex-direction: column-reverse;
  align-items: center;
  height: 100%;
  border: 1px solid red;
}

#high-score, #score {
  margin: 5px 0;
}

/* Game Over Screen */
#game-over {
  width: 100vw;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

h1 {
  font-size: 40px;
}

h2 {
  font-size: 40px;
}

button {
  font-size: 40px;
  margin: 30px;
  border: none;
  color: green;
}

button:hover {
  color: greenyellow;
}

